--- a/bibliografia.bib
+++ b/bibliografia.bib
@@ -386,7 +386,7 @@ month={Nov},}
 }
 
 @INPROCEEDINGS{8615650,
-  author={F. {Freire Scattone} and K. {Rosa Braghetto}},
+  author={F. Freire Scattone and K. Rosa Braghetto},
   booktitle={2018 IEEE 37th International Symposium on Reliable Distributed Systems Workshops (SRDSW)}, 
   title={A Microservices Architecture for Distributed Complex Event Processing in Smart Cities}, 
   year={2018},
@@ -1105,6 +1105,176 @@ ferramentas
     url = {http://www.espertech.com/esper}
 }
 
+@misc{ESPERDataWindows,
+    author = {{ESPERDataWindows}},
+    company = {Espertech},
+    year = {2020},
+    url-date = {28/05/2020},
+    url = {http://esper.espertech.com/release-8.6.0/reference-esper/html/epl-views.html}
+}
+
+
+
+@article{higashino2016cepsim,
+  title={CEPSim: Modelling and simulation of Complex Event Processing systems in cloud environments},
+  author={Higashino, Wilson A and Capretz, Miriam AM and Bittencourt, Luiz F},
+  journal={Future Generation Computer Systems},
+  volume={65},
+  pages={122--139},
+  year={2016},
+  publisher={Elsevier}
+}
+
+
+
+@INPROCEEDINGS{8656961,
+  author={A. {Meslin} and N. {Rodriguez} and M. {Endler}},
+  booktitle={2018 IEEE International Smart Cities Conference (ISC2)}, 
+  title={A Scalable Multilayer Middleware for Distributed Monitoring and Complex Event Processing for Smart Cities}, 
+  doi={10.1109/ISC2.2018.8656961}
+}
+  
+  
+  
+@ARTICLE{9018282,
+  author={A. {Meslin} and N. {Rodriguez} and M. {Endler}},
+  journal={IEEE Internet of Things Journal}, 
+  title={Scalable Mobile Sensing for Smart Cities: The MUSANet Experience}, 
+  year={2020},
+  volume={7},
+  number={6},
+  pages={5202-5209},
+  doi={10.1109/JIOT.2020.2977298}
+  }
+
+@book{hightower2017kubernetes,
+  title={Kubernetes: up and running: dive into the future of infrastructure},
+  author={Hightower, Kelsey and Burns, Brendan and Beda, Joe},
+  year={2017},
+  publisher={" O'Reilly Media, Inc."}
+}
+
+
+@book{burns2018managing,
+  title={Managing Kubernetes: operating Kubernetes clusters in the real world},
+  author={Burns, Brendan and Tracey, Craig},
+  year={2018},
+  publisher={O'Reilly Media}
+}
+
+
+@book{fowler2017microservices,
+  title={Microservices in Production: Standard Principles and Requirements},
+  author={Fowler, Susan J},
+  year={2017},
+  publisher={O'Reilly Media}
+}
+
+
+@book{43826,
+title	= {Kubernetes - Scheduling the Future at Cloud Scale},
+author	= {David K. Rensin},
+year	= {2015},
+URL	= {http://www.oreilly.com/webops-perf/free/kubernetes.csp},
+booktitle	= {OSCON 2015},
+pages	= {All},
+address	= {1005 Gravenstein Highway North Sebastopol, CA 95472}
+}
+
+
+
+@INPROCEEDINGS{9179545,
+  author={A. {Power} and G. {Kotonya}},
+  booktitle={2020 IEEE Sixth International Conference on Big Data Computing Service and Applications (BigDataService)}, 
+  title={BoboCEP: Distributed Complex Event Processing for Resilient Fault-Tolerance Support in IoT}, 
+  pages={109-112},
+  doi={10.1109/BigDataService49289.2020.00024}}
+  
+  @INPROCEEDINGS{8473459,
+  author={A. S. {Dhillon} and S. {Majumdar} and M. {St-Hilaire} and A. {El-Haraki}},
+  booktitle={2018 IEEE International Congress on Internet of Things (ICIOT)}, 
+  title={A Mobile Complex Event Processing System for Remote Patient Monitoring}, 
+  year={2018},
+  pages={180-183},
+  doi={10.1109/ICIOT.2018.00034}}
+
+
+
+
+
+@ARTICLE{9151379,
+  author={V. {Passas} and V. {Miliotis} and N. {Makris} and T. {Korakis}},
+  journal={IEEE Transactions on Vehicular Technology}, 
+  title={Pricing Based Distributed Traffic Allocation for 5G Heterogeneous Networks}, 
+  year={2020},
+  volume={69},
+  number={10},
+  pages={12111-12123},
+  doi={10.1109/TVT.2020.3012189}}
+  
+  
+
+@INPROCEEDINGS{9163457,
+  author={M. {Flamini} and M. {Naldi}},
+  booktitle={2020 43rd International Conference on Telecommunications and Signal Processing (TSP)}, 
+  title={Cournot Equilibrium in an Owner-Renter Model for 5G Networks under Flat-Rate Pricing}, 
+  year={2020},
+  volume={},
+  number={},
+  pages={158-161},
+  doi={10.1109/TSP49548.2020.9163457}}
+
+
+
+@ARTICLE{8480631,
+  author={N. C. {Luong} and P. {Wang} and D. {Niyato} and Y. {Liang} and Z. {Han} and F. {Hou}},
+  journal={IEEE Communications Surveys   Tutorials}, 
+  title={Applications of Economic and Pricing Models for Resource Management in 5G Wireless Networks: A Survey}, 
+  year={2019},
+  volume={21},
+  number={4},
+  pages={3298-3339},
+  doi={10.1109/COMST.2018.2870996}}
+
+
+
+@INPROCEEDINGS{7490807,
+  author={ {Qin Guo} and  {Jiwei Huang}},
+  booktitle={2015 4th International Conference on Computer Science and Network Technology (ICCSNT)}, 
+  title={A complex event processing based approach of multi-sensor data fusion in IoT sensing systems}, 
+  year={2015},
+  pages={548-551},
+  doi={10.1109/ICCSNT.2015.7490807}}
+
+
+@INPROCEEDINGS{7463825,
+  author={H. {Zhao} and Y. {Yang}},
+  booktitle={2015 IEEE International Conference on Smart City/SocialCom/SustainCom (SmartCity)}, 
+  title={A Data Generation Algorithm for Internet of Things Based on Complex Event Processing}, 
+  year={2015},
+  pages={827-831},
+  doi={10.1109/SmartCity.2015.170}}
+
+
+
+@inproceedings{10.1145/3323503.3345028,
+author = {Roriz, Marcos and Magalh\~{a}es, Fernando B. V. and Guedes, \'{A}lan L. V. and Colcher, S\'{e}rgio and Endler, Markus},
+title = {An Introduction to Data Stream Processing: A Complex Event Processing Approach},
+year = {2019},
+isbn = {9781450367639},
+publisher = {Association for Computing Machinery},
+address = {New York, NY, USA},
+url = {https://doi.org/10.1145/3323503.3345028},
+doi = {10.1145/3323503.3345028},
+abstract = {Most of information technologies courses are focused on exposing the traditional static data (e.g., SGBD) processing model and lack on presenting the data stream model. Such model can be applied to fields such as Internet of Things, busyness and finances, logistics and smart cities) of the industry. Complex Event Processing consists of a programming approach to handle Data Stream Processing. It provide primitives to process and detect the occurrence of patterns in data streams. This short course has the objective of presenting the complex event processing (CEP) programming model as a means of dealing with the specificities of data flows.},
+booktitle = {Proceedings of the 25th Brazillian Symposium on Multimedia and the Web},
+pages = {11–13},
+numpages = {3},
+keywords = {IoT, smart cities, traffic, complex event processing},
+location = {Rio de Janeiro, Brazil},
+series = {WebMedia '19}
+}
+
 @misc{WSO2,
     author = {{Siddhi CEP}},
     company = {WSO2},
@@ -1764,3 +1934,22 @@ numpages = {12}
   year={1992},
   publisher={JSTOR}
 }
+
+@INPROCEEDINGS{8603150,
+  author={D. {Baur} and F. {Griesinger} and Y. {Verginadis} and V. {Stefanidis} and I. {Patiniotakis}},
+  booktitle={2018 IEEE/ACM 11th International Conference on Utility and Cloud Computing (UCC)}, 
+  title={A Model Driven Engineering Approach for Flexible and Distributed Monitoring of Cross-Cloud Applications}, 
+  year={2018},
+  pages={31-40},
+  doi={10.1109/UCC.2018.00012}
+  }
+
+
+@INPROCEEDINGS{6449437,
+  author={P. {Leitner} and C. {Inzinger} and W. {Hummer} and B. {Satzger} and S. {Dustdar}},
+  booktitle={2012 Fifth IEEE International Conference on Service-Oriented Computing and Applications (SOCA)}, 
+  title={Application-level performance monitoring of cloud services based on the complex event processing paradigm}, 
+  pages={1-8},
+  doi={10.1109/SOCA.2012.6449437}}
+
+
