--- a/cap-introducao.tex
+++ b/cap-introducao.tex
@@ -20,10 +20,14 @@
 
 
 %pq estudar cidades inteligentes?
-Ao longo dos últimos anos, o conceito de Cidades Inteligentes vem ganhando popularidade, sendo promovido com os propósitos de aumentar a sustentabilidade e melhorar a qualidade de vida para os residentes de centros urbanos~\citep{kon2016cidades}. Cidades Inteligentes podem ser definidas como cidades que usam uma infraestrutura de tecnologia da informação para otimizar o uso de recursos municipais e melhorá-los, com o objetivo de aumentar a qualidade de vida de seus cidadãos~\citep{doi:10.1080/10630732.2011.601117}. Os investimentos feitos em infraestrutura física estão usualmente associados à implementação de tecnologias da informação e comunicação nos diferentes setores de uma cidade (transporte, saúde, educação, comércio, etc.), feita por meio de dispositivos eletrônicos, como sensores e atuadores. 
+Ao longo dos últimos anos, o conceito de Cidades Inteligentes vem ganhando popularidade, sendo promovido com os propósitos de aumentar a sustentabilidade e melhorar a qualidade de vida para os residentes de centros urbanos~\citep{kon2016cidades}. Cidades Inteligentes podem ser definidas como cidades que usam uma infraestrutura de tecnologia da informação para otimizar o uso de recursos municipais, com o objetivo de aumentar a qualidade de vida de seus cidadãos~\citep{doi:10.1080/10630732.2011.601117}. 
+
+Os investimentos feitos em infraestrutura física estão usualmente associados à implementação de tecnologias da informação e comunicação nos diferentes setores de uma cidade (transporte, saúde, educação, comércio, etc.), feita por meio de dispositivos eletrônicos, como sensores e atuadores. 
 O uso desses sensores gera uma grande quantidade de dados a todo momento, com os quais é possível melhorar a gestão da cidade, aprimorar os serviços públicos e privados ou oferecer novos serviços.
-Tem-se um exemplo disso na empresa de transporte público da cidade de São Paulo (SPTrans), que possui sensores em toda a sua frota de ônibus e gera cerca de dez mil dados por minuto sobre posições de ônibus. %Esses enviam dados sobre a posição dos ônibus em tempo real, e 
-Tais informações são disponibilizadas publicamente por meio do site \cite{Olhovivo}, permitindo que os cidadãos melhor planejem suas viagens.
+Exemplo disso são os sensores da frota de ônibus do sistema de transporte público da cidade de São Paulo, SP.  Eles geram cerca de dez mil registros de dados por minuto sobre posições de ônibus.  Esses dados são coletados pela São Paulo Transporte S/A (SPTrans), empresa que administra o transporte público por ônibus da cidade, e disponibilizados publicamente por meio do site \cite{Olhovivo}, permitindo que os cidadãos melhor planejem suas viagens.
+
+%Tem-se um exemplo disso na São Paulo Transporte S/A (SPTrans), empresa que administra o transporte público por ônibus da cidade de São Paulo, SP, que possui sensores em toda a sua frota de ônibus e gera cerca de dez mil registros de dados por minuto sobre posições de ônibus. %Esses enviam dados sobre a posição dos ônibus em tempo real, e 
+%Tais informações são disponibilizadas publicamente por meio do site \cite{Olhovivo}, permitindo que os cidadãos melhor planejem suas viagens.
 %\todo{colocar números, para dar ideia do volume dos dados envolvidos!}
 %para cidadãos e desenvolvedores por meio do site \cite{Olhovivo} , para que possam melhor planejar suas viagens. 
 
@@ -45,7 +49,7 @@ Os dados dos diferentes serviços de uma cidade podem ter um volume massivo, ser
 %\todo[inline]{Por que a frase acima está no futuro do pretérito? Isso não faz sentido!}
 É possível realizar o processamento desses dados usando ferramentas que trabalham com dados de forma discreta, ou seja, que processam os dados em lotes após coletá-los e armazená-los. Esse tipo de abordagem de processamento já foi bastante estudado e documentado na literatura da área \citep{Dean:2010:MFD:1629175.1629198, DBLP:journals/corr/MoniruzzamanH13,computers3040117}.
 Mas em cenários nos quais o valor que a informação tem é dado em função do tempo,
-o atraso que esse tipo de abordagem gera (a depender da quantidade de processamento e do volume de dados que está sendo processado) pode causar perda de relevância da informação derivada.
+o atraso que esse tipo de abordagem gera pode causar perda de relevância da informação derivada, a depender da quantidade de processamento e do volume de dados que está sendo processado.
 
 %A importância de processar os dados em tempo real vem do valor que a informação tem em função do tempo. 
 Um acidente de trânsito que ocorreu momentos atrás, um princípio de incêndio ou um assalto em andamento são algumas das situações para as quais existem mais formas de tratamento quanto mais rapidamente forem identificadas. Essas situações podem ser descobertas utilizando dados de diferentes fontes, tanto de sensores como de pessoas. 
@@ -59,7 +63,7 @@ O CEP pode ser utilizado para modelar a detecção de situações de interesse a
 %Quando alguma situação específica ocorre, é possível detectar um evento de forma indireta, a partir de um padrão dos dados das medições coletadas.\todo[inline]{O parágrafo acima está repetitivo. A última frase, em particular, parece que já foi dita no início do parágrafo.}
 %\todo[inline]{No parágrafo acima, você exemplifica onde o CEP pode ser usado, mas não define o que é CEP. Além disso, está faltando a referência bibliográfica para o CEP. Na verdade, na sua introdução toda falta mais referências bibliográficas.}
 
-Para a execução de sistemas de processamento em tempo real em cidades inteligentes é necessário que o sistema utilizado seja escalável, para lidar a grande variação do volume de dados, e implemente métodos de recuperação de falhas de execução, para manter um nível mínimo de disponibilidade. O uso de plataformas de nuvem facilita o cumprimento destes requisitos, pois os recursos em uma plataforma podem ser requisitados automaticamente caso a carga de processamento aumente e a manutenção física do ambiente de execução passa a ser de responsabilidade do provedor de nuvem. Sistemas que cumprem estes requisitos, auto-escalabilidade horizontal e tolerância a falhas, são caracterizados como sistemas nativos de nuvem~\citep{garrison2017cloud}
+Sistemas de processamento de dados em tempo real para Cidades Inteligentes precisam ser escaláveis, para lidar com a grande variação do volume de dados, e devem ser tolerantes a falhas no ambiente de execução, para se manterem disponíveis. O uso de plataformas de nuvem facilita o cumprimento desses requisitos, pois os recursos em uma plataforma podem ser requisitados automaticamente caso a carga de processamento aumente e a manutenção física do ambiente de execução é de responsabilidade do provedor de nuvem. Sistemas que usam infraestrutura de execução em nuvem e cumprem esses requisitos, auto-escalabilidade e tolerância a falhas, são caracterizados como sistemas nativos de nuvem~\citep{garrison2017cloud}.
 
 %Para extrair o máximo valor de ambientes de computação em nuvem é necessários que os sistemas em execução nestes ambientes sejam desenvolvidos com o objetivo de minimizar a necessidade de administração manual para seu funcionamento, para conseguirem reagir mais rapidamente possível a falhas e alterações no seu funcionamento, de forma a não desperdiçar recursos computacionais durante a ocorrência de falhas de execução ou variação de carga de entrada para o processamento. Para atingir este objetivo, os sistemas devem ser desenvolvidos nativamente com mecanismos de tolerância a falhas no ambiente de execução que permitam a re-instanciação de qualquer parte do sistema, e de auto-escalabilidade, para que o sistema tenha a habilidade de requisitar automaticamente mais ou menos recursos computacionais de acordo com o monitoramento de sobrecarga e sub-carga próprios.
 
@@ -69,11 +73,13 @@ Para a execução de sistemas de processamento em tempo real em cidades intelige
 %. Uma abordagem que muitas organizações estão adotando atualmente é o uso de computação em nuvem, onde aluga-se recursos computacionais de um provedor de nuvem de acordo com a quantidade de recursos e tempo de uso. Este tipo de abordagem para aquisição de infraestrutura de ambientes de execução permite que somente a quantidade necessária de recursos em cada momento seja adquirida, reduzindo custos com sub-utilização de máquinas e manutenção física.
 
 
+As solução atuais de software livre de CEP disponíveis na atualidade ~\cite{Esper,DroolsFusion,WSO2CEP} %(e.g., \todo{Incluir aqui a citação a essas ferramentas})  
+não oferecem suporte nativo para a execução em ambientes de nuvem, ou mesmo distribuídos.
 
-Atualmente, a maioria da pesquisa em distribuição do processamento de eventos foca nos métodos de balanceamento dos tipos de eventos alocados a cada nó de processamento e as ferramentas de código aberto disponíveis não oferecem nativamente métodos de distribuição e auto-escalabilidade. Trabalhos como os de~\cite{Isoyama:2012:SCE:2335484.2335498}, \cite{6906776} e \cite{Balkesen:2013:RRI:2488222.2488257} propuseram diferentes tipos de abordagens para tratar esse problema. As principais técnicas já apresentadas para a distribuição do processamento de eventos se resumem a reunir o processamento de tipos de eventos com dependências similares ou separá-los com base no uso de recursos que cada processamento de tipo de evento usa. Além disso, uso de arquiteturas orquestradas, em que uma parte central executa todas as ações principais do sistema, foi escolhido por todos os trabalhos pesquisados. Esse estilo organizacional pode levar a um sistema no qual a ocorrência de uma falha no ponto central afeta todo o sistema~\citep{Newman:2015:BM:2904388}. 
-
-
-
+%As solução atuais de software livre de CEP  (e.g., \todo{Incluir aqui a citação a essas ferramentas}) não oferecem nativamente mecanismos de distribuição e auto-escalabilidade\todo{Nenhuma das ferramentas faz CEP distribuído? Não ter distribuição é uma coisa, não ter auto-escalabilidade é outra coisa diferente. As ferramentas não têm nenhuma das duas coisas? O resumo fala sobre as ferramentas não terem suporte nativo para a execução na nuvem. O resumo e a introdução precisam falar a mesma coisa.}. 
+Mas há muita pesquisa na área de distribuição de processamento de eventos e, em particular, de métodos de balanceamento da carga de trabalho nos nós do sistema. Trabalhos como os de~\cite{Isoyama:2012:SCE:2335484.2335498}, \cite{6906776} e \cite{Balkesen:2013:RRI:2488222.2488257} propuseram diferentes tipos de abordagens para tratar esse problema. As principais técnicas já apresentadas
+%para a distribuição do processamento de eventos 
+se resumem a reunir num mesmo nó os processamentos de tipos de evento com dependências similares ou separá-los com base no uso de recursos que cada processamento de tipo de evento usa. Em todos esses trabalhos, foram usadas  arquiteturas orquestradas, em que uma parte central executa todas as ações principais do sistema. Esse estilo organizacional pode levar a um sistema no qual a ocorrência de uma falha no nó central afeta todo o sistema~\citep{Newman:2015:BM:2904388}. 
 
 
 %a distribuição e escalabilidade das ferramentas de CEP de código aberto não fornecem nativamente métodos para 
@@ -126,20 +132,37 @@ Atualmente, a maioria da pesquisa em distribuição do processamento de eventos 
 \section{Objetivos}
 \label{sec:objetivo}
 \index{objetivos}
-%\todo[inline]{Não coloquei anotações nesta subseção porque acho melhor conversarmos por vídeo sobre ela. Ela está cheia de problemas.  }
 
-O objetivo principal deste trabalho é a criação de uma arquitetura de Processamento de Eventos Complexos para a execução nativa de nuvem, que implemente os requisitos necessários de sistemas nativos de nuvem: auto-escalabilidade, tolerância a falhas no ambiente de execução e uso de especificação de infraestrutura computacional como código~\citep{garrison2017cloud}. O sistema desenvolvido a partir da implementação desta arquitetura deve utilizar o mínimo de recursos computacionais e físicos para detecção de eventos em tempo real.
+O objetivo principal deste trabalho é a criação de uma arquitetura de Processamento de Eventos Complexos nativa de nuvem para o processamento de dados de cidades inteligentes, que satisfaz os requisitos de auto-escalabilidade e tolerância a falhas no ambiente de execução. 
+%\todo[inline]{O objetivo do trabalho foi desenvolver um sistema de CEP escalável, para atender requisitos de tempo real de aplicações de cidades inteligentes. A criação de arquitetura coreografada e nativa de nuvem se refere a COMO você atingiu esse objetivo, é a caracterização da solução. Tente reescrever o parágrafo acima tendo isso em mente. No título do seu trabalho aparece "cidades inteligentes". Então, elas precisam aparecer tambeém aqui, na descrição dos objetivos. }
 
-Ao criar esta arquitetura distribuída, foi escolhido usar o padrão de microsserviços para o seu desenho. Microsserviços são descritos como serviços pequenos e autônomos que trabalham juntos para a execução de tarefas~\citep{Newman:2015:BM:2904388}. O uso de microsserviços facilita o desenvolvimento de uma arquitetura escalável, pois é possível criar mais instâncias do mesmo microsserviço que executa funções que estão em sobrecarga. Além disto, foi decidido usar o estilo de coreografia para o desenho da arquitetura, onde os microsserviços se coordenam para a realização das funções do sistema. Isto resulta em um melhor funcionamento do sistema em caso de falhas pontuais, pois somente o microsserviço que encontrou a falha em execução é afetado.
-
-A partir da pesquisa realizada nos trabalhos relacionados de distribuição de processamento de eventos complexos, foram  criados dois algoritmos de balanceamento de carga entre os microsserviços que contem nós de processamento de eventos. Um destes algoritmos seleciona os tipos de eventos a serem realocados de acordo com o tempo necessário para reconstruir seu estado de detecção, enquanto o outro seleciona os tipos de eventos de acordo com a similaridade dos seus tipos de eventos de entrada, procurando agrupar o processamento de tipos de eventos com a mesma entrada no mesmo nó de processamento e consequentemente minimizando a transmissão de eventos entre nós de processamento de eventos.
-
-Foi desenhado um experimento para avaliar o sistema proposto aqui em relação a sua auto-escalabilidade em situação de sobrecarga. O propósito foi verificar se o sistema realmente atingia a auto-escalabilidade, requisitando e integrando mais nós de processamento de acordo com o aumento de dados entrando no sistema continuamente em tempo real. A avaliação foi realizada separadamente para ambos os algoritmos de balanceamento de carga, com o intuito de verificar o impacto do uso de cada um deles.
-
+%Ao criar esta arquitetura distribuída, foi escolhido usar o padrão de microsserviços para o seu desenho. Microsserviços são descritos como serviços pequenos e autônomos que trabalham juntos para a execução de tarefas~\citep{Newman:2015:BM:2904388}.
+ %O uso de microsserviços facilita o desenvolvimento de uma arquitetura escalável e de fácil implantação, pois é possível criar  mais instâncias do mesmo microsserviço que executa funções que estão em sobrecarga. Além disto, foi decidido usar o estilo de coreografia para o desenho da arquitetura, onde os microsserviços se coordenam para a realização das funções do sistema. Isto resulta em um melhor funcionamento do sistema em caso de falhas pontuais, pois somente o microsserviço que encontrou a falha em execução é afetado.
  
+A solução, chamada de \texttt{CEP Handler}, foi desenhada seguindo o estilo arquitetural de microsserviços, no qual o sistema é construído como um conjunto de serviços pequenos e autônomos, que podem ser implantados e escalados de forma independente. 
+Na arquitetura \texttt{CEP Handler}, o processamento dos eventos é dividido entre múltiplas instâncias de um microsserviço de processamento de eventos, cada uma alocada em um nó diferente do sistema. Os microsserviços se coordenam para a realização das funções e a distribuição do processamento de eventos nos nós do sistema, ou seja, a coordenação se dá por meio de coreografia. Isso resulta em maior disponibilidade (que a provida por arquiteturas orquestradas) em caso de falhas pontuais, pois uma falha em uma única instância não afeta a detecção de eventos nas outras. O sistema atinge a auto-escalabilidade a partir do monitoramento constante do uso de recursos por cada instância e requisição para o serviço de gerenciamento dinamico de recursos da criação de novos nós de processamento durante altas cargas de entrada ou da remoção de nós de processamento de eventos para cargas baixas de entrada, utilizando assim um modelo de escalabilidade horizontal.
+
+%\todo[inline]{Mas como o sistema auto-escala? Quando as instâncias são criadas ou removidas? Faltou falar aqui do gerenciamento dinâmico de recursos.}
+
+%O sistema desenvolvido a partir da implementação desta arquitetura utiliza o mínimo de recursos computacionais e físicos para detecção de eventos em tempo real.\todo{Essa afirmação está muito forte, você não tem como garantir que é mesmo o mínimo.}
+
+Com base em trabalhos relacionados, foram  criados dois algoritmos para o balanceamento de carga entre as instâncias do microsserviço de processamento de eventos. Um dos algoritmos seleciona os tipos de evento a serem realocados de uma instância para outra de acordo com o tempo necessário para reconstruir seu estado de detecção. O outro algoritmo seleciona os tipos de evento de acordo com a similaridade dos seus tipos de evento de entrada, procurando agrupar numa mesma instância o processamento de tipos de evento que possuem os mesmos tipos de entrada, minimizando, assim, a transmissão de eventos para os nós de processamento.
+
+%Um experimento foi realizado para avaliar o desempenho do sistema implementado em relação a sua auto-escalabilidade em situação de sobrecarga. 
+%\todo[inline]{O que está no parágrafo abaixo, eu copiei do resumo e colei aqui, para você complementar com mais detalhes. Você precisa apresentar um pouco mais de detalhes sobre o experimento, dizer que ele é uma rede para detecção de problemas comuns no tráfego de ônibus de grandes cidades, falar quais métricas de desempenho foram consideradas (latência, vazão, tempo de uso de recursos, etc.), sumariar os principais resultados observados e o que se concluiu deles. O capítulo de introdução precisa dar uma visão completa do que foi feito no trabalho e de seus principais resultados. Você já tem tudo isso escrito no cap. de Conclusões. Basta pegar de lá e abstrair/resumir um pouco para colocar aqui. }
+ 
+Um protótipo da arquitetura \texttt{CEP Handler} foi implementado, utilizando somente ferramentas de software livre, de forma integrada à plataforma de cidades inteligentes InterSCity~\citep{del2019design}, do Instituto Nacional de Ciência e Tecnologia (INCT) da Internet do Futuro para Cidades Inteligentes~\citep{Interscitysite}\footnote{O INCT da Internet do Futuro para Cidades Inteligentes é financiado por CNPq (proc. 465446/2014-0), Coordenação de Aperfeiçoamento de Pessoal de Nível Superior – Brasil (CAPES) – Código de Financiamento 001 e FAPESP (procs. 14/50937-1 e 15/24485-9).}. 
 
 
-%O objetivo principal deste trabalho foi a construção de uma arquitetura de microsserviços de distribuição de processamento de eventos nativa de nuvem, de forma que diferentes instâncias de um mesmo microsserviço possam processar diferentes tipos de eventos e que elas interajam para que exista um consenso sobre qual instância deve processar cada evento, levando a uma organização coreografada da divisão de processamento de eventos. 
+
+Para avaliar o desempenho do sistema, um cenário experimental de cidades inteligentes foi criado, a partir de dados reais de posições de ônibus da frota do sistema de transporte público da cidade de São Paulo, SP.
+Nos experimentos, o fluxo de dados entrando no sistema variou de seis a dez mil eventos por minuto. O propósito foi verificar se o sistema realmente atingia a auto-escalabilidade, requisitando e integrando mais nós de processamento de acordo com o aumento de dados entrando no sistema continuamente. A avaliação foi realizada separadamente para ambos os algoritmos de balanceamento de carga, com o intuito de verificar o impacto do uso de cada um deles. Quatro métricas foram coletadas: latência, vazão, número total de eventos detectados e tempo de uso dos ambientes de execução. Os resultados mostraram que o sistema escala automaticamente, aumentando o número de instâncias conforme sua carga de entrada aumenta. O número de eventos detectados sofreu uma pequena varição entre uma execução e outra, que pode ser atribuída a variação de latência. O terceiro quartil das latências medidas durante todas as execuções ficou sempre abaixo de cem milissegundos. A média do tempo de uso do ambiente de execução não apresentou diferença significativa entre o uso de um algoritmo de balanceamento de carga ou outro.
+
+%\todo[inline]{O parágrafo abaixo é o que já estava no seu texto. Observe que você apenas disse que fez um experimento para avaliar se o sistema de fato auto-escala, mas não contou os resultados dele. :)}
+
+
+
+%O objetivo principal deste trabalho foi a construção de uma arquitetura de microsserviços de distribuição de processamento de eventos nativa de nuvem, de forma que diferentes instâncias de um mesmo microsserviço possam processar diferentes tipos de evento e que elas interajam para que exista um consenso sobre qual instância deve processar cada evento, levando a uma organização coreografada da divisão de processamento de eventos. 
 %\todo[inline]{Ué, acima você diz que a organização será ``orquestrada''. Não deveria ser coreografada? Além disso, você tem que explicar um pouco porque está propondo o uso de microsserviços e falar algo sobre a coreografia também (para justificar essa estratégia que você está propondo).}
 
 %O propósito da construção desse sistema é avaliar diferentes algoritmos de distribuição de carga relacionados ao processamento de eventos complexos, para que se descubra qual deles possibilita a menor latência de processamento, a maior vazão de eventos por segundo e o menor uso de recursos computacionais. A partir da aplicação e combinação de técnicas já estudadas na literatura espera-se mostrar, a partir de experimentos em larga escala, qual técnica obtém o melhor resultado. \todo{Os experimentos que você fez não permitem }
@@ -161,26 +184,27 @@ Foi desenhado um experimento para avaliar o sistema proposto aqui em relação a
 As contribuições deste trabalho são as seguintes:
 
 \begin{itemize}
-  \item[1.] Criação de uma arquitetura de microsserviços coreografada para a distribuição de processamento de eventos complexos nativa de nuvem, ou seja, que possui um mecanismo de tolerância a falhas no ambiente de execução, é auto-escalável horizontalmente e cujo uso de recursos computacionais por cada parte é referenciado em código de infraestrutura computacional.
+  \item[1.] Criação de uma arquitetura de microsserviços coreografada para a distribuição de processamento de eventos complexos nativa de nuvem, ou seja, que possui um mecanismo de tolerância a falhas no ambiente de execução, é auto-escalável horizontalmente. %\todo{olha o horizontal que não foi explicado antes aqui de novo - coloquei la no gerenciamento dinamico de recursos}
+  %e cujo uso de recursos computacionais por cada parte é referenciado em código de infraestrutura computacional\todo{final da frase está confuso}.
 
   
-  \item[2.] Implementação de um protótipo, com a arquitetura proposta, para o processamento de dados em tempo real por CEP com base em ferramentas de código aberto. Este sistema foi desenvolvido para funcionar juntamente com a plataforma de software livre para cidades inteligentes InterSCity~\citep{del2019design}, do Instituto Nacional de Ciência e Tecnologia (INCT) da Internet do Futuro para Cidades Inteligentes~\citep{Interscitysite}.
+  \item[2.] Implementação de um protótipo, com a arquitetura proposta, para o processamento de dados em tempo real por CEP com base em ferramentas de software livre. Este sistema foi desenvolvido para funcionar juntamente com a plataforma de software livre para cidades inteligentes InterSCity. %~\citep{del2019design}, do Instituto Nacional de Ciência e Tecnologia (INCT) da Internet do Futuro para Cidades Inteligentes~\citep{Interscitysite}.
   
   %O sistema utiliza diferentes bibliotecas e ferramentas para ter suporte nativo de nuvem\todo{"suporte nativo de nuvem" não faz sentido. Reescrever o trecho}, as quais facilitam a instanciação em qualquer provedor de nuvem privada.
   
-  \item[3.] Desenho e execução de experimentos relacionados a cidades inteligentes, utilizando a simulação de dados reais do transporte público na cidade de São Paulo, para determinar o desempenho do sistema durante uma situação de sobrecarga, avaliando as seguintes métricas: capacidade de auto-escalabilidade, custo computacional de processamento, latência  durante período de sobrecarga do sistema, e vazão do sistema para a detecção de possíveis perdas de eventos.
+  \item[3.] Desenho e execução de um experimento relacionado a cidades inteligentes, utilizando a simulação de dados reais do transporte público por ônibus na cidade de São Paulo, para analisar o desempenho do protótipo num cenário de variação da carga de dados de entrada por meio das seguintes métricas: capacidade de auto-escalabilidade, tempo de uso de recursos computacionais, latência e vazão do sistema.% (para a detecção de possíveis perdas de eventos).
   
-  \item[4.] Uma publicação sobre o presente trabalho em 2018 no \textit{The 1st Workshop on the Distributed Smart City (WDSC'2018)} durante a \textit{37th IEEE International Symposium on Reliable Distributed Systems}, entítulada : \textit{A Microservices Architecture for Distributed Complex Event Processing in Smart Cities} ~\citep{8615650}.
+  \item[4.] Uma publicação sobre o presente trabalho em 2018 em \textit{The 1st Workshop on the Distributed Smart City (WDSC'2018)} do \textit{37th IEEE International Symposium on Reliable Distributed Systems}, intitulada: \textit{A Microservices Architecture for Distributed Complex Event Processing in Smart Cities} ~\citep{8615650}.
   
-  \item[5.] Uma publicação sobre o presente trabalho em 2020 na \textit{Escola Regional de Alto Desempenho - São Paulo}, entítulada : \textit{Processamento Distribuído de Eventos Complexos Aplicado à Detecção de Eventos no Trânsito em Tempo Real} ~\citep{scattone2020cep}.
+  \item[5.] Uma publicação sobre o presente trabalho em 2020 na \textit{Escola Regional de Alto Desempenho - São Paulo}, intitulada: \textit{Processamento Distribuído de Eventos Complexos Aplicado à Detecção de Eventos no Trânsito em Tempo Real} ~\citep{scattone2020cep}. 
 
-  %\item[3.] Comparação de algoritmos de balanceamento de carga para a realocação do processamento de eventos complexos, utilizando experimentos de grande escala para validar os resultados obtidos e verificar o desempenho do sistema em relação à latência e custo computacional de todo o sistema. A partir dos resultados obtidos, foi possível deduzir\todo{não foi dedução, foi simplesmente observação} que o algoritmo que realoca tipos de eventos de acordo com o uso de estado de cada um obteve um custo computacional menor de execução que o outro algoritmo, que realocava tipos de eventos de acordo com a similaridade dos tipos de eventos de entrada de cada um.
+  %\item[3.] Comparação de algoritmos de balanceamento de carga para a realocação do processamento de eventos complexos, utilizando experimentos de grande escala para validar os resultados obtidos e verificar o desempenho do sistema em relação à latência e custo computacional de todo o sistema. A partir dos resultados obtidos, foi possível deduzir\todo{não foi dedução, foi simplesmente observação} que o algoritmo que realoca tipos de evento de acordo com o uso de estado de cada um obteve um custo computacional menor de execução que o outro algoritmo, que realocava tipos de evento de acordo com a similaridade dos tipos de evento de entrada de cada um.
   %\todo[inline]{Nessa terceira contribuição, é melhor você destacar os experimentos envolvendo dados reais feitos para validar e avaliar o desempenho da arquitetura proposta, e não a comparação dos algoritmos. Somente a partir dos experimentos que você fez, não dá para afirmar que um algoritmo é melhor que o outro sempre. Esse resultado só poderia ser generalizado se você provasse matematicamente isso ou se tivesse feito experimentos com diferentes aplicações e ambientes computacionais. }
   
   %\todo[inline]{Acima, você não vai comparar técnicas de escalabilidade (a técnica de escalabilidade que usará são os microsserviços). O quê será comparado são as técnicas de balanceamento de carga, certo?}
 
 
-%A principal contribuição para fins não científicos é o uso deste trabalho para o processamento de dados em tempo real para serviços urbanos públicos e privados. A solução desenvolvida poderá ser usada na detecção de diferentes eventos de grandes centros urbanos. Com a detecção desses eventos em tempo real, as partes interessadas em cada ocorrência podem ser notificadas e uma atuação na cidade poderá ser feita com menor tempo entre a aparição de um problema e sua remediação. Como é possível definir tipos de eventos em função de outros tipos de eventos, os desenvolvedores podem definir tipos de eventos a partir de tipos de eventos previamente cadastrados, economizando o uso de recursos de processamento.
+%A principal contribuição para fins não científicos é o uso deste trabalho para o processamento de dados em tempo real para serviços urbanos públicos e privados. A solução desenvolvida poderá ser usada na detecção de diferentes eventos de grandes centros urbanos. Com a detecção desses eventos em tempo real, as partes interessadas em cada ocorrência podem ser notificadas e uma atuação na cidade poderá ser feita com menor tempo entre a aparição de um problema e sua remediação. Como é possível definir tipos de evento em função de outros tipos de evento, os desenvolvedores podem definir tipos de evento a partir de tipos de evento previamente cadastrados, economizando o uso de recursos de processamento.
 %------------mudar isso
 
 
@@ -203,6 +227,6 @@ As contribuições deste trabalho são as seguintes:
 \label{sec:organizacao_trabalho}
 
 
-No Capítulo~\ref{cap:conceitos}, apresenta-se os principais conceitos relacionados a Processamento de Eventos Complexos, Arquitetura de Microsserviços e técnicas de distribuição de processamento com estado. O Capítulo \ref{cap:trabalhos} apresenta artigos que estudam a escalabilidade em CEP a partir de diferentes técnicas, uso de CEP nativo de nuvem, e compara as conclusões sobre a pesquisa na área. No Capítulo \ref{cap:arquitetura}, apresenta-se com detalhes a arquitetura de microsserviços criada neste trabalho. O protótipo e as ferramentas utilizadas no sistema  são apresentados em \ref{cap:prototype} . O desenho do experimento utilizado para avaliar o sistema é apresentado no Capítulo \ref{cap:experimento} e os resultados do experimento em si são apresentados no Capítulo \ref{cap:resultados}. Finalmente, o Capítulo~\ref{cap:conclusoes} faz uma reflexão sobre o resultado e sobre possíveis contribuições futuras.
+No Capítulo~\ref{cap:conceitos}, apresenta-se os principais conceitos relacionados a Processamento de Eventos Complexos, arquitetura de microsserviços e técnicas de distribuição de processamento com estado. O Capítulo \ref{cap:trabalhos} apresenta trabalhos que estudam a distribuição de CEP a partir de diferentes técnicas, aborda a execução de CEP em plataformas de nuvem e compara as conclusões sobre as pesquisas nessas áreas. No Capítulo \ref{cap:arquitetura}, apresenta-se com detalhes a arquitetura de microsserviços criada neste trabalho. Um protótipo de implementação da arquitetura e as ferramentas utilizadas nele  são apresentados em \ref{cap:prototype}. O desenho do experimento utilizado para avaliar o sistema é apresentado no Capítulo \ref{cap:experimento} e os resultados do experimento em si são apresentados no Capítulo \ref{cap:resultados}. Finalmente, o Capítulo~\ref{cap:conclusoes} discute os resultados e  possíveis contribuições futuras.
 
 %As sequências testadas no trabalho estão disponíveis no Apêndice \ref{ape:sequencias}.
