--- a/cap-prototipo.tex
+++ b/cap-prototipo.tex
@@ -56,7 +56,7 @@ A ESPER permite representar eventos em alguns formatos diferentes, porém soment
 \item \textbf{Apache Avro}: Apache \cite{Avro} é um protocolo de seriação de dados implementado em várias linguagens. Ele apresenta um desempenho interno tão bom quanto um vetor de objetos Java, com a vantagem de poder ser lido por outros softwares em outras linguagens. Feito inicialmente para o Apache \cite{hadoop}, atualmente ele é aceito em vários sistemas de processamento em tempo real além do ESPER, como Apache \cite{spark}, o que diminui o custo de integração com outros serviços no futuro.
 \end{itemize}
 
-Foi escolhido o uso de Apache Avro para a representação de enventos neste trabalho, por ser independente do Java, desta forma deixando o sistema mais desacoplado de qualquer linguagem de programação. 
+Foi escolhido o uso de Apache Avro para a representação de enventos neste trabalho, por ser independente do Java, desta forma deixando o sistema mais desacoplado de qualquer linguagem de programação. Outro fator limitante no desenvolvimento do protótipo foi o suporte aos tipos de janelas de agregação. Como discutido na Seção \ref{sec:loadDistribution}, é necessário determinar o tamanho das janelas de dados a partir da definição dos tipos de eventos. De todas as janelas de dados oferecidas pelo ESPER~\citep{ESPERDataWindows}, só foi implementado o suporte a quatro: \texttt{ext\_timed}, \texttt{ext\_time\_batch}, \texttt{length} e \texttt{length\_batch}. Os dois primeiro foram selecionados por serem um exemplo de janelas temporais no qual o tempo utilizado é externo e não necessita da coordenação dos relógios internos de cada nó de processamento de eventos. Os dois últimos foram selecionados como exemplos de janelas de agregação por número de eventos por serem um dos tipos mais comuns de janelas de dados utilizados pela comunidade. %O tempo necessário para a realocação de tipos de eventos que usam janelas de agregação dos tipos \texttt{length} e \texttt{length\_batch} pode ser determinado a partir da divisão do tamanho da janela pelo fluxo de eventos por segundo para cada tipo de evento de entrada.
 
 %\todo[inline]{Ué, a seção termina sem explicar qual desses formatos é de fato usado no seu sistema. }
 
