--- a/tese-exemplo.tex
+++ b/tese-exemplo.tex
@@ -301,11 +301,12 @@ Dissertation (Masters) - Instituto de Matemática e Estatística,
 Universidade de São Paulo, São Paulo, 2020.
 \\
 
-Complex Event Processing is one of the most used techniques to deal with real-time data. CEP considers each new piece of data as an event and allows the definition of event types from the detection of patterns within incoming input events. Despite an extensive list of CEP implementations currently available, few offer open-sourced cloud-native solutions, that fullfill the necessary requirements os cloud-native systems: self-scalability, fault tolerance and the definition of system's infrastructure as code or script. Cloud-native systems are essential in order to continually processa real-time data from institutions such as smart cities, that procude a great volume a variety of data, since they can potentinaly save costs by discarding unused computational resources when incoming data flow is decreasing or request aditional resources when incoming data flow is increasing. Here we built a microsservice architecture for CEP that fullfils the cloud native requirements, where event processing is distributed among distinct instances of the same microsservice. These instances use an choreographic based coordination style, in which no single part controls the rest of the system, and task distribution is decided by compromise between all parts of the system. This results in greater system fault tolerance, since ther is no single poitn of failure that can impact the rest of the system. A prototype of this architecture
-was developed, using only open-sourced tools, to be integrated ont the InterSCity Smart City Platform, from INCT Future Internet for Smart Cities. In order to evaluate system self-scalability, an smart city experimental scenario was design, using continuos data simulation of real time bus traffic data from São Paulo City. Since bus traffic greatly increases during the simulation time interval, the system can be evaluated in an overload workload. Results show that the system can mantain a latency level compatible wit other real time systems, even during node overload and system expansion, with minimal event loss.\\
+Over the last few years, Smart City concepts have gained popularity because of its purposes of increasing sustainability and improving quality of life for large cities residents. Complex Event Processing is one of the most used techniques to process real-time data, with large volume and velocity, such as the data coming from Smart Cities. In CEP each new piece of data is treated as an event, and can be defined by an event type. New event types can be registered by defining an query using CEP operators to detect specific patterns on incoming events from other event types. In order to process real-time data for Smart Cities, scalability and fault tolerance are the main requirements to be fulfilled. Satisfying these requirements is essential to maintain a functioning system with acceptable latency levels for smart cities situations detection. Using cloud providers is a convenient method  to distribute and scale complex event processing, since cloud providers can dynamically manage computational resource usage. Current open source CEP implementations do not offer official cloud-native execution support, or even official distributed execution support.  The present work presents a cloud-native microservice architecture for distributed CEP. Event processing is distributed across several instances of the same microsservice, which can be dynamically created or destroyed based in resource usage. These instances use a choreography style of communication among each other, where there are no central nodes controlling all other instances, instead they must agree on any multi instance action. This style of communication ensures greater fault tolerance, since failures in one instance do not affect event processing in all other instances. A prototype of this architecture was developed, using open source tools, integrated with the InterSCity Smart City Platform, from INCT Future Internet for Smart Cities. An experimental scenario was design from real bus traffic data from São Paulo city.
+In order to evaluate system performance four metrics are analyzed: latency, throughput, number of events detected and resource usage. Results show the system achieves self-scalability, creating new CEP nodes as the input load increases, while maintaining acceptable levels of latency. 
+\\
 
 
-\todo[inline]{Isto está horrivel}
+%\todo[inline]{Isto está horrivel}
 
 \noindent \textbf{Keywords:} Cloud-Native, Complex Event Processing, Smart Cities, CEP, Big Data, Real-time Processing, Scalability, Microservices.
 
